changed to index

--- a/What_Can_I_do.html
+++ b/What_Can_I_do.html
@@ -2324,7 +2324,7 @@
 		overflow: visible;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Landing.html;
+		--web-action-target: index.html;
 		cursor: pointer;
 	}
 	#__61_bea {
@@ -2386,7 +2386,7 @@
 		overflow: visible;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Landing.html;
+		--web-action-target: index.html;
 		cursor: pointer;
 	}
 	.___78 {
@@ -2740,7 +2740,7 @@
 		overflow: visible;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Landing.html;
+		--web-action-target: index.html;
 		cursor: pointer;
 	}
 	#__61_bfk {
@@ -2802,7 +2802,7 @@
 		overflow: visible;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Landing.html;
+		--web-action-target: index.html;
 		cursor: pointer;
 	}
 	.___78_bfr {
