--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -889,7 +889,7 @@
 		overflow: visible;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Landing.html;
+		--web-action-target: index.html;
 		cursor: pointer;
 	}
 	#__61 {
@@ -951,7 +951,7 @@
 		overflow: visible;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Landing.html;
+		--web-action-target: index.html;
 		cursor: pointer;
 	}
 	.___78 {
@@ -5198,7 +5198,7 @@
 		overflow: visible;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Landing.html;
+		--web-action-target: index.html;
 		cursor: pointer;
 	}
 	#__61_bzs {
@@ -5260,7 +5260,7 @@
 		overflow: visible;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Landing.html;
+		--web-action-target: index.html;
 		cursor: pointer;
 	}
 	.___78_bzz {
