--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Landing</title>
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="Landing.css"/>
-<script id="applicationScript" type="text/javascript" src="Landing.js"></script>
+<script id="applicationScript" type="text/javascript" src="server.js"></script>
 </head>
 <body>
 <div id="Landing">
