--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<svg style="width:inherit;height:inherit;overflow:visible;">
 			<rect fill="url(#____7_hh_pattern)" width="100%" height="100%"></rect>
 				<pattern elementId="____7_hh" id="____7_hh_pattern" x="0" y="0" width="100%" height="100%">
-					<image x="0" y="0" width="100%" height="100%" href="____7_hh_pattern.png" xlink:href="____7_hh_pattern.png" alt = "FILE NOT FOUND"></image>
+					<image x="0" y="0" width="100%" height="100%" href="images/____7_hh_pattern.png" xlink:href="____7_hh_pattern.png" alt = "FILE NOT FOUND"></image>
 				</pattern>
 				</svg>
 			</div>
