fixed small display issues

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				</svg>
 			</div>
 	</div>
-	<div id="up_arrow">
+<!-- 	<div id="up_arrow">
 		<svg class="___78_fc">
 			<rect fill="rgba(134,145,158,0.596)" stroke="rgba(248,248,248,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___78_fc" rx="42.5" ry="42.5" x="0" y="0" width="94.333" height="85">
 			</rect>
@@ -217,7 +217,7 @@
 			<path fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Icon_open_arrow_thick_bottom" d="M 17.24462890625 0 L 17.24462890625 43.11157608032227 L 0 43.11157608032227 L 26.12561416625977 68.978515625 L 51.73389053344727 43.11157608032227 L 34.4892578125 43.11157608032227 L 34.4892578125 0 L 17.24462890625 0 Z">
 			</path>
 		</svg>
-	</div>
+	</div> -->
 	<div id="menu_button">
 		<svg class="___60_ff">
 			<rect fill="rgba(134,145,158,0.596)" stroke="rgba(248,248,248,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___60_ff" rx="42.5" ry="42.5" x="0" y="0" width="94.333" height="85">
